  --with-nocross-compiler-suite=pgi) from pgCC to pgc++. PGI removed
  pgCC in version 16.1. If your installation still provides pgCC and
  you want to use it, please add CXX=pgCC to your configure line.

Bugfixes:

- Prevent sampling/unwinding when Intel MPI is used. This combination,
  even when sampling is not active, may mysteriously alter the
  application output just by linking libunwind.

------------------- Released version 2.0.2 ---------------------------

Bugfixes:

- The preprocessing of source files before they will be instrumented
  with OPARI2 was broken.  This is fixed.
- Prevent potential division by zero error during calculation of tsc
  timer frequency.
- Compiler-specific CXXFLAGS might break the 'build-score' configure
  as CXX use to build 'scorep-score' might differ from CXX used to
  build the Score-P libraries. CXXFLAGS in build-score are now
  ignored. To set build-score related CXXFLAGS, use
  CXXFLAGS_FOR_BUILD_SCORE.
- Fix bug in configuration of SHMEM support triggered by change in
  shmem.fh header of Open MPI 1.10.2.
- Fix PAPI configure check when additional libraries are needed to
  successfully link to PAPI. This was a regression introduced with
  version 2.0.
- Fix typos in remapping specification file which caused the
  point-to-point and collective bytes transferred metrics to always
  be zero.
- Build-system hardening.
- The configure check for libunwind now also works if libunwind
  depends on liblzma.
- Documentation improvements.
- Fixed memory leaks in sampling and CUDA mode.

------------------- Released version 2.0.1 ---------------------------

Bugfixes:

- Prevent the memory adapter from initializing the measurement system
  as this leads to program crashes if it happens too early, e.g., on
  Blue Gene systems. If memory instrumentation is the only means of
  instrumentation, the measurement system is initialized via the
  feature 'compiler constructor'. If this feature isn't available